# GPU-synchrotron-compression

./: README.md
CUDA_ImCod/: CMakeLists.txt  single.sh
CUDA_ImCod/BitStreamBuilder/: BitStreamBuilder.cu
CUDA_ImCod/Engines/: CodingEngine.cu  CodingEngine.cuh  DecodingEngine.cu  DecodingEngine.cuh  Engine.cu  Engine.cuh
CUDA_ImCod/IO/: IOManager.hpp  IOManager.ipp
